My_Styles.css
/* Attributes concerning navbar */

.navbarFrame {}


/* Text attributes in navbar */

.navbarText {
    text-align: center;
    font-size: 1.45em;
}


/*
.navstyle{
	background-color: yellow;
	padding-bottom: 2em;
	padding-top: 3px;
}
*/

.navElement {
    float: right;
    font-size: 30px;
}

.homeBG {
    background-color: #264d73;
    /* Green */
}

#homeTextBG {
    color: ghostwhite;
    text-align: center;
    font-size: 2.5em;
    margin-top: 1em;
    margin-right: 1em;
    margin-left: 1em;
    margin-bottom: .5em;
    font-family: "Georgia, serif";
}

#myButton {
    color: white;
    background-color: #336699;
    border-color: #336699;
    margin-bottom: 20px;
    font-size: 3em;
    justify-content: center;
}

.centerWrapper {
    text-align: center;
}

.overlay {
    z-index: 1;
    height: 100%;
    width: 100%;
    position: fixed;
    overflow: auto;
    top: 0px;
    left: 0px;
    background: rgba(0, 0, 0, 0.7);
    /*can be anything, of course*/
}


/* Background image for homePage(Signed in) */

.bgIMG {
    background-image: url(Pictures/HomePic3.jpeg);
    width: 100%;
    height: 100%;
}


/* Container for HomePage(Signed in) */

.container {
    margin: auto;
    width: 70%;
    height: 900px;
    border: .5px solid black;
    border-top: 0;
    background-color: white;
}

.containerMSG {
    width: 500px;
    height: 600px;
    border: .5px solid black;
    padding: 50px;
    margin: auto;
}

.titleMSG {
    margin-top: -50px;
    margin-left: -50px;
    overflow: default;
    min-height: 76px;
    border: 1px solid #ccc;
    background-color: #f1f1f1;
    text-align: center;
    
}

.circle {
    height: 55px;
    width: 55px;
    background-color: gainsboro;
    border-radius: 50%;
}


/* Style the tab */

.tab {
    overflow: hidden;
    border: 1px solid #ccc;
    background-color: #f1f1f1;
    text-align: center;
}


/* Style the buttons that are used to open the tab content */

.tab button {
    background-color: inherit;
    float: center;
    border: none;
    outline: none;
    cursor: pointer;
    padding: 14px 16px;
    transition: 0.3s;
}


/* Change background color of buttons on hover */

.tab button:hover {
    background-color: #ddd;
}


/* Create an active/current tablink class */

.tab button.active {
    background-color: #ccc;
}


/* Style the tab content */

.tabcontent {
    display: visible;
    padding: 6px 12px;
    border: 1px solid #ccc;
    border-top: none;
}


/* Messenger container arrangement */

.sideBySide {
    display: flex;
    margin: auto;
    padding: 50px;
}

footer {
    /*    box-shadow: 0px 500px 0px 500px #474545;*/
    /*	position:fixed;*/
    /*	left: 0;*/
    padding-bottom: 3px;
    padding-top: 3px;
    width: 100%;
    background-color: #474545;
    color: white;
    text-align: center;
}

.footerBg {
    background-color: #474545;
    /* Black Gray */
    min-height: 50px;
    color: #fff;
}

